# l3xz_mapping

./: .codespellrc  .gitignore  .gitmodules  README.md
client/: after_start.sh  client_ip.conf  master_ip.conf  start.sh
client/client_ws/src/l3xz/: CMakeLists.txt  README.md  package.xml
client/client_ws/src/l3xz/include/l3xz/: Const.h  Pump.h  Valve.h
client/client_ws/src/l3xz/include/l3xz/common/actuator/interface/: AnglePositionActuator.h
client/client_ws/src/l3xz/include/l3xz/common/sensor/interface/: AnglePositionSensor.h
client/client_ws/src/l3xz/include/l3xz/common/threading/: ThreadBase.h  ThreadStats.h
client/client_ws/src/l3xz/include/l3xz/driver/dynamixel/: Dynamixel.h  MX28.h
client/client_ws/src/l3xz/include/l3xz/driver/ssc32/: SSC32.h
client/client_ws/src/l3xz/include/l3xz/glue/l3xz/ELROB2022/: Const.h  DynamixelAnglePositionActuator.h  DynamixelAnglePositionActuatorBulkWriter.h  DynamixelAnglePositionSensor.h  DynamixelAnglePositionSensorBulkReader.h
client/client_ws/src/l3xz/include/l3xz/phy/serial/: AsyncSerial.h
client/client_ws/src/l3xz/launch/: l3xz.launch
client/client_ws/src/l3xz/src/: Pump.cpp  Valve.cpp  node.cpp
client/client_ws/src/l3xz/src/common/actuator/interface/: AnglePositionActuator.cpp
client/client_ws/src/l3xz/src/common/sensor/interface/: AnglePositionSensor.cpp
client/client_ws/src/l3xz/src/common/threading/: ThreadBase.cpp  ThreadStats.cpp
client/client_ws/src/l3xz/src/driver/dynamixel/: Dynamixel.cpp  MX28.cpp
client/client_ws/src/l3xz/src/driver/ssc32/: SSC32.cpp
client/client_ws/src/l3xz/src/phy/serial/: AsyncSerial.cpp
client/client_ws/src/l3xz/tooling/orocos/: CMakeLists.txt  orocos.cpp
client/client_ws/src/l3xz/tooling/pumpctrl/: CMakeLists.txt  pumpctrl.cpp
client/client_ws/src/l3xz/tooling/ssc32ctrl/: CMakeLists.txt  ssc32ctrl.cpp
client/client_ws/src/l3xz/tooling/valvectrl/: CMakeLists.txt  valvectrl.cpp
client/client_ws/src/l3xz_mapping/: CMakeLists.txt  package.xml
client/client_ws/src/l3xz_mapping/launch/: client.launch  lidar.launch  realsense.launch  rgb.launch  thermal.launch
docker/: .Dockerfile.swp  Dockerfile  build_docker.sh  start_docker.sh
host/: .clang-format  .entrypoint.sh.swo  Dockerfile  build_docker.sh  echo.txt  entrypoint.sh  log.txt  logdrive.conf  master_ip.conf_org  start_docker.sh
host/host_ws/: echo.txt
host/host_ws/src/l3xz_mapping/: 4  CMakeLists.txt  package.xml
host/host_ws/src/l3xz_mapping/include/l3xz_mapping/: map.hpp  pose.hpp  tflistener.hpp  timer.hpp
host/host_ws/src/l3xz_mapping/include/l3xz_mapping/map/: map_lidar.hpp  map_overlay.hpp
host/host_ws/src/l3xz_mapping/include/l3xz_mapping/map/base/: map_base.hpp  map_interface.hpp  map_postprocessing.hpp
host/host_ws/src/l3xz_mapping/include/l3xz_mapping/model/: model_lidar.hpp
host/host_ws/src/l3xz_mapping/include/l3xz_mapping/model/base/: model_base.hpp
host/host_ws/src/l3xz_mapping/launch/: l3xz_mapping.launch  odom_recorder.launch  plotter.launch  plotter_grid.launch  rtabmap_base.launch  thermal_recorder.launch  transformers.launch
host/host_ws/src/l3xz_mapping/msg/: Startpoint.msg  track.msg  waypoint.msg
host/host_ws/src/l3xz_mapping/scripts/: dummy_caller.py  geo.py  logger.py  odom_waypoint.py  plotter.py  recorder.py  transform_odom.py
host/host_ws/src/l3xz_mapping/src/l3xz_mapping/: knownposition_node.cpp  map.cpp  pose.cpp  tflistener.cpp  timer.cpp
host/host_ws/src/l3xz_mapping/src/l3xz_mapping/map/: map_overlay.cpp
host/host_ws/src/l3xz_mapping/src/l3xz_mapping/map/base/: map_base.cpp  map_interface.cpp
host/host_ws/src/l3xz_mapping/src/l3xz_mapping/model/: model_lidar.cpp
host/host_ws/src/l3xz_mapping/src/l3xz_mapping/model/base/: model_base.cpp
host/host_ws/src/l3xz_mapping/srv/: SetStartpoint.srv  SetWaypoint.srv
host/host_ws/src/tflistener/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  package.xml
host/host_ws/src/tflistener/include/tflistener/: poseFromTf.hpp
host/host_ws/src/tflistener/src/tflistener/: poseFromTf.cpp
host/host_ws/src/webgui/: dashboard.css  ecuconfig.html  elrob.css  elrob.html  gui.css  gui.html  index.html
host/host_ws/src/webgui/javascript/: ecu.js  frontend.js  frontend_elrob.js  goalsetter.js  joydrive.js  logger.js  visualizer.js
host_ws/src/l3xz_mapping/: CMakeLists.txt  package.xml
host_ws/src/l3xz_mapping/include/l3xz_mapping/: pose.hpp  tflistener.hpp  timer.hpp
host_ws/src/l3xz_mapping/include/l3xz_mapping/map/: map_lidar.hpp  map_overlay.hpp
host_ws/src/l3xz_mapping/include/l3xz_mapping/map/base/: map_base.hpp  map_interface.hpp  map_postprocessing.hpp
host_ws/src/l3xz_mapping/launch/: knownposition_lidar.launch  l3xz_mapping.launch  rtabmap_base.launch
host_ws/src/l3xz_mapping/msg/: Track.msg
host_ws/src/l3xz_mapping/scripts/: plotter.py  recorder.py
host_ws/src/l3xz_mapping/src/l3xz_mapping/: knownposition_node.cpp  pose.cpp  tflistener.cpp  timer.cpp
host_ws/src/l3xz_mapping/src/l3xz_mapping/map/: map_overlay.cpp
host_ws/src/l3xz_mapping/src/l3xz_mapping/map/base/: map_base.cpp  map_interface.cpp
