<?xml version="1.0"?>
<package format="2">
  <name>l3xz</name>
  <version>0.0.0</version>
  <description>The l3xz package</description>

  <maintainer email="consulting@lxrobotics.com">Alexander Entinger</maintainer>

  <license>Copyright LXRobotics GmbH</license>

  <url type="website">https://107-systems.org/</url>
  <url type="repository">https://github.com/107-systems/l3xz</url>

  <author email="consulting@lxrobotics.com">Alexander Entinger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export></export>
</package>
