<?xml version="1.0"?>
<package format="2">
  <name>l3xz_mapping</name>
  <version>0.0.0</version>
  <description>The map package</description>

  <maintainer email="lois@todo.todo">lois</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>

